--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,9 @@ body{
     background-size: cover;
     background-position: top;
 }
-
+.bad{
+    color: rgb(255, 95, 95);
+}
 .container{
     margin:20px 39px 20px 39px ;
 }
