--- a/css/register.css
+++ b/css/register.css
@@ -100,7 +100,11 @@ form p a{
 select{
     direction: rtl;
 }
-
+input {
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none !important;
+}
 @media(min-width :1000px){
     .container{
         margin: 20px 555px 20px 555px;
