--- a/css/studentDashboard.css
+++ b/css/studentDashboard.css
@@ -7,6 +7,8 @@ body{
     background: #F1F4F9;
     margin: 0;
     margin-bottom: 50px;
+    font-family: 'Tajawal', sans-serif;
+
 }
 
 /* Header */
@@ -31,6 +33,7 @@ header .hcontainer a{
 
 header img{
     width: 99px;
+    align-items: flex-start;
 }
 
 .welcome {
