--- a/css/studentDashboard.css
+++ b/css/studentDashboard.css
@@ -47,6 +47,10 @@ header img{
 
 form{
     text-align: right;
+    background: #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #00000017;
 }
 
 form p{
@@ -68,10 +72,10 @@ form .boxcontainer{
 }
 form .boxcontainer input{
     text-align: right;
-    border:none;
-    background: none;
-    border-bottom: 1px solid #6f6f6f;
+    border: 1px solid #d8d8d8;
+    background: #f9f9f9;
     margin-bottom: 20px;
+    padding: 7px 10px;
 }
 
 form .boxcontainer input:focus{
